translucent panel now fixed to remove on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body {
     margin-bottom: 15px;
 }
 
-/*-----------------------------------------------------------images*/
+/*-----------------------------------------------------------main image*/
 
 img {
   width:100%;
@@ -78,11 +78,16 @@ img {
   height: 200px;
   padding-top: 40px;
   padding-left: 10px;
-  background-color: rgba(255, 137, 58, .7);
+  background-color: rgba(255, 137, 58, .8);
   bottom: 150px;
   right: 1px;
-  position: absolute;
+  position: relative;
+  top: -300px;
 }
 
+@media screen and (max-width: 990px) {
 
+    #translucentbox {
+        visibility: hidden;
+    }
 
